@@ -1,3 +1,11 @@
+Fri May 24 12:32:54 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
+
+	* features/code_check/W0491.feature : Add scenario to reproduce abend
+	  problem of parsing the same name in different namespaces.
+
+	* lib/adlint/cc1/parser.y : Fix incomplete identifier to typedef-name
+	  translation.
+
 Thu May 23 19:10:38 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
 
 	* features/code_check/W0492.feature : Add scenario to reproduce abend
